--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
  "name": "hairday",
  "description": "Aplicação Web de agendamento para corte de cabelo.",
  "author": "Nicole Brenda",
-  "scripts": {
-    "server":"json-server --watch server.json --port 3333"
-  },
-  "dependencies": {
-    "json-server": "^1.0.0-alpha.21"
-  }
+ "scripts": {
+  "server": "json-server --watch server.json --port 3333",
+  "build": "webpack"
+ },
+ "dependencies": {
+  "json-server": "^1.0.0-alpha.21"
+ },
+ "devDependencies": {
+  "webpack": "^5.89.0",
+  "webpack-cli": "^5.1.4"
+ }
 }
